add AI test button to all anomaly tests

--- a/docs/data-tests/anomaly-detection-configuration/anomaly-exclude-metrics.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-exclude-metrics.mdx
@@ -3,6 +3,8 @@ title: "anomaly_exclude_metrics"
 sidebarTitle: "anomaly_exclude_metrics"
 ---
 
+<Snippet file="ai-generate-test.mdx" />
+
 `anomaly_exclude_metrics: [SQL where expression on fields metric_date / metric_time_bucket / metric_value]`
 
 By default, data points are compared to the all data points in the training set.
