--- a/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
@@ -3,6 +3,8 @@ title: Anomaly Tests configuration params
 sidebarTitle: "All configuration params"
 ---
 
+<Snippet file="ai-generate-test.mdx" />
+
 <Tip>
   If your data set has a timestamp column that represents the creation time of a
   field, it is highly recommended configuring it as a `timestamp_column`.
