--- a/docs/data-tests/anomaly-detection-configuration/anomaly-sensitivity.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-sensitivity.mdx
@@ -2,6 +2,7 @@
 title: "anomaly_sensitivity"
 sidebarTitle: "anomaly_sensitivity"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `anomaly_sensitivity: [int]`
 
