--- a/docs/data-tests/anomaly-detection-configuration/dimensions.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/dimensions.mdx
@@ -2,6 +2,7 @@
 title: "dimensions"
 sidebarTitle: "dimensions"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `dimensions: [list of SQL expressions]`
 
