--- a/docs/data-tests/anomaly-detection-configuration/exclude-final-results.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/exclude-final-results.mdx
@@ -2,6 +2,7 @@
 title: "exclude_final_results"
 sidebarTitle: "exclude_final_results"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `exclude_final_results: [SQL where expression on fields value / average]`
 
