--- a/docs/data-tests/anomaly-detection-configuration/exclude_regexp.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/exclude_regexp.mdx
@@ -2,6 +2,7 @@
 title: "exclude_regexp"
 sidebarTitle: "exclude_regexp"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `exclude_regexp: [regex]`
 
