--- a/docs/data-tests/anomaly-detection-configuration/update_timestamp_column.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/update_timestamp_column.mdx
@@ -2,6 +2,7 @@
 title: "update_timestamp_column"
 sidebarTitle: "update_timestamp_column"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `update_timestamp_column: [column name]`
 
