--- a/docs/data-tests/anomaly-detection-configuration/where-expression.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/where-expression.mdx
@@ -2,6 +2,7 @@
 title: "where_expression"
 sidebarTitle: "where_expression"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `where_expression: [sql expression]`
 
