--- a/docs/data-tests/anomaly-detection-tests/all-columns-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/all-columns-anomalies.mdx
@@ -2,6 +2,8 @@
 sidebarTitle: "All columns anomalies"
 title: "all_columns_anomalies"
 ---
+<Snippet file="ai-generate-test.mdx" />
+
 
 `elementary.all_columns_anomalies`
 
