--- a/docs/data-tests/anomaly-detection-tests/dimension-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/dimension-anomalies.mdx
@@ -2,6 +2,8 @@
 sidebarTitle: "Dimension anomalies"
 title: "dimension_anomalies"
 ---
+<Snippet file="ai-generate-test.mdx" />
+
 
 `elementary.dimension_anomalies`
 
