--- a/docs/data-tests/anomaly-detection-tests/event-freshness-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/event-freshness-anomalies.mdx
@@ -2,6 +2,7 @@
 sidebarTitle: "Event freshness anomalies"
 title: "event_freshness_anomalies"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `elementary.event_freshness_anomalies`
 
