--- a/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
@@ -2,6 +2,8 @@
 title: "volume_anomalies"
 sidebarTitle: "Volume anomalies"
 ---
+<Snippet file="ai-generate-test.mdx" />
+
 `elementary.volume_anomalies`
 
 Monitors the row count of your table over time per time bucket (if configured without `timestamp_column`, will count table total rows).
