--- a/docs/data-tests/anomaly-detection-configuration/column-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/column-anomalies.mdx
@@ -2,6 +2,7 @@
 title: "column_anomalies"
 sidebarTitle: "column_anomalies"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `column_anomalies: [column monitors list]`
 
