--- a/docs/data-tests/anomaly-detection-configuration/event_timestamp_column.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/event_timestamp_column.mdx
@@ -2,6 +2,7 @@
 title: "event_timestamp_column"
 sidebarTitle: "event_timestamp_column"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `event_timestamp_column: [column name]`
 
