--- a/docs/data-tests/anomaly-detection-configuration/exclude_prefix.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/exclude_prefix.mdx
@@ -2,6 +2,7 @@
 title: "exclude_prefix"
 sidebarTitle: "exclude_prefix"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `exclude_prefix: [string]`
 
