--- a/docs/data-tests/anomaly-detection-configuration/ignore_small_changes.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/ignore_small_changes.mdx
@@ -2,6 +2,7 @@
 title: "ignore_small_changes"
 sidebarTitle: "ignore_small_changes"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 ```
 ignore_small_changes:
