--- a/docs/data-tests/anomaly-detection-configuration/timestamp-column.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/timestamp-column.mdx
@@ -2,6 +2,7 @@
 title: "timestamp_column"
 sidebarTitle: "timestamp_column"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `timestamp_column: [column name]`
 
