--- a/docs/data-tests/anomaly-detection-tests/Anomaly-troubleshooting-guide.mdx
+++ b/docs/data-tests/anomaly-detection-tests/Anomaly-troubleshooting-guide.mdx
@@ -2,6 +2,7 @@
 title: "Anomaly Tests Troubleshooting"
 sidebarTitle: "Anomaly tests troubleshooting"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 <Accordion title="Verify the data collection for your anomaly test">
 
