--- a/docs/data-tests/anomaly-detection-tests/column-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/column-anomalies.mdx
@@ -2,6 +2,7 @@
 title: "column_anomalies"
 sidebarTitle: "Column anomalies"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `elementary.column_anomalies`
 
