--- a/docs/data-tests/anomaly-detection-tests/freshness-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/freshness-anomalies.mdx
@@ -2,6 +2,7 @@
 title: "freshness_anomalies"
 sidebarTitle: "Freshness anomalies"
 ---
+<Snippet file="ai-generate-test.mdx" />
 
 `elementary.freshness_anomalies`
 
