--- a/docs/_snippets/ai-generate-test.mdx
+++ b/docs/_snippets/ai-generate-test.mdx
@@ -1,3 +1,3 @@
-<Card title="Generate your anomaly test with Elementary AI" icon="wand-magic-sparkles" horizontal="true" href="https://join.slack.com/t/elementary-community/shared_invite/zt-34j8a1r4z-jjukw_e_jsBYL5jCHN1qIQ">
+<Card title="Generate your anomaly test with Elementary AI" icon="wand-magic-sparkles" horizontal="true" href="www.elementary-data.com/community">
   Let our Slack chatbot create the anomaly test you need.
 </Card>
