change ai test button link

--- a/docs/_snippets/ai-generate-test.mdx
+++ b/docs/_snippets/ai-generate-test.mdx
@@ -1,3 +1,3 @@
-<Card title="Generate your anomaly test with Elementary AI" icon="wand-magic-sparkles" horizontal="true" href="elementary-data.com/community">
+<Card title="Generate your anomaly test with Elementary AI" icon="wand-magic-sparkles" horizontal="true" href="https://elementary-data.com/community">
   Let our Slack chatbot create the anomaly test you need.
 </Card>
