AI agent page - no navigation

--- a/docs/resources/ai-agents.mdx
+++ b/docs/resources/ai-agents.mdx
@@ -1,6 +1,12 @@
+---
+title: "Meet our new hires."
+---
+
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747036956/ai-agents.png" />
+
 ### 🪓 **Welcome Bill Cutter – Performance & Cost**
 
-> Please welcome Bill Cutter to the team! (p**r**onouns**:** cost/cuts)
+> Please welcome Bill Cutter to the team! (pronouns: cost/cuts)
 > 
 > 
 > 🏆 *Career highlight*: Saved $73K/month by killing off nightly model runs that hadn’t been queried in 6 months.
