AI agent page - no navigation

--- a/docs/resources/ai-agents.mdx
+++ b/docs/resources/ai-agents.mdx
@@ -9,11 +9,11 @@ title: "Meet our new hires."
 > Please welcome Bill Cutter to the team! (pronouns: cost/cuts)
 > 
 > 
-> 🏆 *Career highlight*: Saved $73K/month by killing off nightly model runs that hadn’t been queried in 6 months.
+> *Career highlight*: Saved $73K/month by killing off nightly model runs that hadn’t been queried in 6 months.
 > 
-> 💸 *Specialty*: Finds the jobs no one remembers, the models no one needs, and the compute they’re silently burning. Then cuts them.
+> *Specialty*: Finds the jobs no one remembers, the models no one needs, and the compute they’re silently burning. Then cuts them.
 > 
-> 🧾 *Outside of work*: Writes a performance blog called *Drop Table Everything*. Posts are short. Just like your idle query lifespan.
+> *Outside of work*: Writes a performance blog called *Drop Table Everything*. Posts are short. Just like your idle query lifespan.
 > 
 > Welcome, Bill. We’re already feeling...lighter.
 > 
@@ -23,11 +23,11 @@ title: "Meet our new hires."
 > Let’s give a warm welcome (pun intended) to Blaze Fixer (pronouns: fix/fixes).
 > 
 > 
-> 🏆 *Career highlight*: Resolved a critical pipeline outage 6 minutes before it happened.
+>*Career highlight*: Resolved a critical pipeline outage 6 minutes before it happened.
 > 
-> 🚒 *Specialty*: Incident triage, root cause tracing, and putting out fires before they hit Slack.
+>*Specialty*: Incident triage, root cause tracing, and putting out fires before they hit Slack.
 > 
-> 🔥 *Outside of work*: Volunteers as a chaos engineer in simulated war rooms. 
+>*Outside of work*: Volunteers as a chaos engineer in simulated war rooms. 
 > 
 > Welcome, Blaze. We feel safer already.
 > 
@@ -37,11 +37,11 @@ title: "Meet our new hires."
 > Please welcome Cat A. Logue to the team (pronouns: tag/tags)
 > 
 > 
-> 🏆 *Career highlight*: Tagged and documented 18,492 data assets across 7 environments before her morning coffee. 
+>*Career highlight*: Tagged and documented 18,492 data assets across 7 environments before her morning coffee. 
 > 
-> 🧠 *Specialty*: Organizing chaos. Tags, owners, descriptions, policies—if it exists, she governs it.
+>*Specialty*: Organizing chaos. Tags, owners, descriptions, policies—if it exists, she governs it.
 > 
-> 🏠 *Outside of work*: Adds metadata tags to everything she owns. The toaster is now “device_type: appliance, heat_source: electric, owner: Cat.”
+>*Outside of work*: Adds metadata tags to everything she owns. The toaster is now “device_type: appliance, heat_source: electric, owner: Cat.”
 > 
 > Welcome aboard, Cat. Our catalog already looks cleaner.
 > 
@@ -51,11 +51,11 @@ title: "Meet our new hires."
 > Say hello to Val E. Dator, joining as our AI-powered test strategist (pronouns: test/tests).
 > 
 > 
-> 🏆 *Career highlight*: Once added 142 missing tests during a lunch break.
+>*Career highlight*: Once added 142 missing tests during a lunch break.
 > 
-> 🧪 *Specialty*: Auto-generating test coverage plans, recommending the right tests for every edge case, and proving you forgot something—politely.
+>*Specialty*: Auto-generating test coverage plans, recommending the right tests for every edge case, and proving you forgot something—politely.
 > 
-> 📊 *Outside of work*: Writes dbt tests for her Netflix queue. Flags genre drift, inconsistent ratings, and suspicious rewatch patterns.
+>*Outside of work*: Writes dbt tests for her Netflix queue. Flags genre drift, inconsistent ratings, and suspicious rewatch patterns.
 > 
 > We’re thrilled to have you, Val. Our models are already sleeping better at night.
 >
