--- a/docs/resources/ai-agents.mdx
+++ b/docs/resources/ai-agents.mdx
@@ -9,11 +9,11 @@ title: "Meet our new hires."
 > Please welcome Bill Cutter to the team! (pronouns: cost/cuts)
 > 
 > 
-> *Career highlight*: Saved $73K/month by killing off nightly model runs that hadn’t been queried in 6 months.
+> **Career highlight**: Saved $73K/month by killing off nightly model runs that hadn’t been queried in 6 months.
 > 
-> *Specialty*: Finds the jobs no one remembers, the models no one needs, and the compute they’re silently burning. Then cuts them.
+> **Specialty**: Finds the jobs no one remembers, the models no one needs, and the compute they’re silently burning. Then cuts them.
 > 
-> *Outside of work*: Writes a performance blog called *Drop Table Everything*. Posts are short. Just like your idle query lifespan.
+> **Outside of work**: Writes a performance blog called *Drop Table Everything*. Posts are short. Just like your idle query lifespan.
 > 
 > Welcome, Bill. We’re already feeling...lighter.
 > 
