Update automated-freshness.mdx to fix a typo Anonmaly

--- a/docs/features/anomaly-detection/automated-freshness.mdx
+++ b/docs/features/anomaly-detection/automated-freshness.mdx
@@ -57,7 +57,7 @@ To understand the test result, focus on the gap between the last update and now 
 
 Use the `Anomaly settings` and `result feedback` buttons to impact the monitor.
 
-### Anonmaly settings
+### Anomaly settings
 
 <Snippet file="cloud/features/anomaly-detection/freshness-configuration.mdx" />
 <Snippet file="cloud/features/anomaly-detection/all-anomalies-configuration.mdx" />
