move dbt package to new tab

--- a/docs/_snippets/quickstart-package-install.mdx
+++ b/docs/_snippets/quickstart-package-install.mdx
@@ -128,6 +128,6 @@ Some packages we recommend you check out: [dbt_utils](https://github.com/dbt-lab
 
 ## What happens now?
 
-Once the elementary dbt package has been installed and configured, your test results, run results and [dbt artifacts](/dbt/dbt-artifacts) will be loaded to elementary schema tables.
+Once the elementary dbt package has been installed and configured, your test results, run results and [dbt artifacts](data-tests/dbt/dbt-artifacts) will be loaded to elementary schema tables.
 
 If you see data in these models you completed the package deployment (Congrats! 🎉).
