--- a/docs/key-features.mdx
+++ b/docs/key-features.mdx
@@ -17,7 +17,7 @@ icon: "stars"
     title="dbt artifacts and run results"
     icon="table-tree"
     iconType="regular"
-    href="/dbt/dbt-artifacts"
+    href="/data-tests/dbt/dbt-artifacts"
   >
     Upload metadata, run and test results to tables as part of your jobs.
   </Card>
