--- a/docs/tutorial/viewing-artifacts.mdx
+++ b/docs/tutorial/viewing-artifacts.mdx
@@ -17,6 +17,6 @@ To see these artifacts, we can navigate to our tutorial’s database; here, we w
 </Frame>
 
 These artifacts are used by Elementary tests and the Elementary CLI and will be updated when we run **dbt test**, **dbt run**, and **dbt build**.
-For more information about Elementary's dbt artifacts [click here](/dbt/dbt-artifacts).
+For more information about Elementary's dbt artifacts [click here](/data-tests/dbt/dbt-artifacts).
 
 **Next, let’s see how we add Elementary's tests and anomaly detection to our data.**
