--- a/docs/guides/modules-overview/dbt-package.mdx
+++ b/docs/guides/modules-overview/dbt-package.mdx
@@ -38,9 +38,9 @@ After you deploy the dbt package, you can use Elementary tests, and your dbt art
 <CardGroup cols={3}>
   <Card title="Elementary data tests" href="/features/data-tests" />
 
-  <Card title="dbt artifacts" href="/dbt/dbt-artifacts" />
+  <Card title="dbt artifacts" href="/data-tests/dbt/dbt-artifacts" />
 
-  <Card title="on-run-end hooks" href="/dbt/on-run-end_hooks" />
+  <Card title="on-run-end hooks" href="/data-tests/dbt/on-run-end_hooks" />
 </CardGroup>
 
 Although you can use the package only, we recommend using it with Elementary Cloud or OSS.
