reordering cloud tab

--- a/docs/data-tests/dbt/dbt-package.mdx
+++ b/docs/data-tests/dbt/dbt-package.mdx
@@ -17,7 +17,7 @@ The repository and source code of the Elementary dbt package can be [found here]
 ## Package Features
 
 The Elementary dbt package is designed to power data observability use cases for dbt pipelines.
-This package will upload logs and metadata generated from your runs as dbt artifacts into tables in your datawarehouse.
+This package will upload logs and metadata generated from your runs as dbt artifacts into tables in your data warehouse.
 Additionally, it offers a wide range of tests, including anomalies in volume, freshness, columns and different dimensions of your data.
 
 The impact of the package on **`dbt run`** is minimal, and most of the processing happens as part of the data tests that are executed on **`dbt test`**.
@@ -36,7 +36,7 @@ The impact of the package on **`dbt run`** is minimal, and most of the process
 After you deploy the dbt package, you can use Elementary tests, and your dbt artifacts will be uploaded automatically with on-run-end hooks:
 
 <CardGroup cols={3}>
-  <Card title="Elementary data tests" href="/features/data-tests" />
+  <Card title="Elementary data tests" href="cloud/features/data-tests" />
 
   <Card title="dbt artifacts" href="/data-tests/dbt/dbt-artifacts" />
 
