--- a/docs/oss/cli-commands.mdx
+++ b/docs/oss/cli-commands.mdx
@@ -16,15 +16,13 @@ Read from the test results table and [send new alerts](/oss/guides/alerts/alerts
 edr monitor
 ```
 
-Read from the test results table and generate the [Elementary UI](/features/collaboration-and-communication/data-observability-dashboard):
+Read from the test results table and generate the Elementary report:
 
 ```shell
 edr report
 ```
 
-Read from the test results table and generate the [Elementary UI](/features/collaboration-and-communication/data-observability-dashboard) and send
-it to external
-platforms such as Slack, S3, GCS:
+Read from the test results table and generate the Elementary report and send it to external platforms such as Slack, S3, GCS:
 
 ```shell
 edr send-report
