--- a/docs/_snippets/cloud/quickstart-steps.mdx
+++ b/docs/_snippets/cloud/quickstart-steps.mdx
@@ -11,7 +11,7 @@
   </Step>
   <Step title="Connect your stack">
 Connect your [code repository](/cloud/integrations/code-repo/connect-code-repo), [messaging tools](/cloud/guides/enable-slack-alerts), and [BI platforms](/cloud/integrations/bi/connect-bi-tool) to get full visibility and collaboration across your data workflows.
-See all available integrations [here](/features/integrations).
+See all available integrations [here](cloud/features/integrations).
   </Step>
   <Step title="Invite your team!" icon="party-horn">
     You're done with initial onboarding. Now you can [invite team members](/cloud/manage-team) to join!
