reordering cloud tab

--- a/docs/data-tests/dbt/dbt-artifacts.mdx
+++ b/docs/data-tests/dbt/dbt-artifacts.mdx
@@ -2,7 +2,7 @@
 title: "dbt artifacts"
 ---
 
-The [Elementary dbt package](/quickstart#install-the-dbt-package) includes uploading and modeling of dbt artifacts.
+The [Elementary dbt package](cloud/quickstart#install-the-dbt-package) includes uploading and modeling of dbt artifacts.
 
 <Accordion title="What are dbt artifacts?">
 Each dbt invocation generates artifacts, with details about the project resources, configuration and execution. Most are in json format. The artifacts are practically the metadata and logs of the dbt project.
