reordering cloud tab

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -13,7 +13,7 @@ Elementary includes two products:
 
 <Snippet file="quickstart/quickstart-cards.mdx" />
 
-See the [detailed comparison](/overview/cloud-vs-oss) between Elementary and Elementary Community.
+See the [detailed comparison](cloud/cloud-vs-oss) between Elementary and Elementary Community.
 
 ## Get started with Elementary
 
