--- a/docs/oss/oss-introduction.mdx
+++ b/docs/oss/oss-introduction.mdx
@@ -7,7 +7,7 @@ icon: "square-terminal"
 
 By deploying the CLI, you can **send alerts and self-host the Elementary data observability report**, a comprehensive view of your dbt runs and all dbt test results, helping you track data lineage, test coverage, and overall pipeline health. 
 
-For a scalable and collaborative data quality platform, **look into the [Elementary Cloud Platform](/cloud/introduction)** - A fully managed, enterprise-ready solution with ML-powered anomaly detection, flexible data discovery, integrated incident management, and collaboration tools—all with minimal setup and infrastructure maintenance. See here a [detailed features comparison](/overview/cloud-vs-oss).
+For a scalable and collaborative data quality platform, **look into the [Elementary Cloud Platform](/cloud/introduction)** - A fully managed, enterprise-ready solution with ML-powered anomaly detection, flexible data discovery, integrated incident management, and collaboration tools—all with minimal setup and infrastructure maintenance. See here a [detailed features comparison](cloud/cloud-vs-oss).
 
 ### What can you do with Elementary OSS?
 
