--- a/docs/cloud/main_introduction.mdx
+++ b/docs/cloud/main_introduction.mdx
@@ -13,7 +13,7 @@ Elementary includes two products:
 
 <Snippet file="quickstart/quickstart-cards.mdx" />
 
-See the [detailed comparison](cloud/cloud-vs-oss) between Elementary and Elementary Community.
+See the [detailed comparison](/cloud/cloud-vs-oss) between Elementary Cloud and Elementary OSS.
 
 ## Get started with Elementary
 
@@ -21,7 +21,7 @@ See the [detailed comparison](cloud/cloud-vs-oss) between Elementary and Element
 
 ### Elementary Community
 
-Or - Start with [Elementary Community](/oss/quickstart/quickstart-cli-package), open-source CLI tool you can deploy and orchestrate to send Slack alerts and self-host the Elementary report.
+Or - Start with [Elementary OSS](/oss/quickstart/quickstart-cli-package), open-source CLI tool you can deploy and orchestrate to send Slack alerts and self-host the Elementary report.
 
 ## Why choose Elementary?
 
