--- a/docs/cloud/main_introduction.mdx
+++ b/docs/cloud/main_introduction.mdx
@@ -19,9 +19,9 @@ See the [detailed comparison](/cloud/cloud-vs-oss) between Elementary Cloud and 
 
 <Snippet file="cloud/quickstart-steps.mdx" />
 
-### Elementary Community
+### Elementary OSS
 
-Or - Start with [Elementary OSS](/oss/quickstart/quickstart-cli-package), open-source CLI tool you can deploy and orchestrate to send Slack alerts and self-host the Elementary report.
+Or - Start with [Elementary OSS](/oss/oss-introduction), open-source CLI tool you can deploy and orchestrate to send Slack alerts and self-host the Elementary report.
 
 ## Why choose Elementary?
 
