--- a/docs/_snippets/quickstart/quickstart-cards.mdx
+++ b/docs/_snippets/quickstart/quickstart-cards.mdx
@@ -19,6 +19,8 @@
     title="Elementary OSS Package"
     icon="square-terminal"
     iconType="solid"
+    href="/oss/oss-introduction"
+
   >
     <br />
         For data and analytics engineers that require basic observability capabilities or for evaluating features without vendor approval. Our community can provide great support if needed.  
