--- a/docs/cloud/features/alerts-and-incidents/incident-management.mdx
+++ b/docs/cloud/features/alerts-and-incidents/incident-management.mdx
@@ -3,7 +3,7 @@ title: Incident Management
 sidebarTitle: Incident management
 ---
 
-<Snippet file="cloud/cloud-feature-tag.mdx" />
+<Snippet file="/cloud/cloud-feature-tag.mdx" />
 
 The `Incidents` page is designed to enable your team to stay on top of open incidents and collaborate on resolving them.
 The page gives a comprehensive overview of all current and previous incidents, where users can view the status, prioritize, assign and resolve incidents.
