--- a/docs/cloud/features/alerts-and-incidents/incidents.mdx
+++ b/docs/cloud/features/alerts-and-incidents/incidents.mdx
@@ -3,7 +3,7 @@ title: Incidents in Elementary
 sidebarTitle: Incidents
 ---
 
-<Snippet file="cloud/cloud-feature-tag.mdx" />
+<Snippet file="/cloud/cloud-feature-tag.mdx" />
 
 One of the challenges data teams face is tracking and understand and collaborate on the status of data issues.
 Tests fail daily, pipelines are executed frequently, alerts are sent to different channels.
