--- a/docs/cloud/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
@@ -3,7 +3,7 @@ title: Alerts and Incidents Overview
 sidebarTitle: Alerts & incidents overview
 ---
 
-<Snippet file="/cloud/cloud-feature-tag.mdx" />
+<Snippet file="cloud/cloud-feature-tag.mdx" />
 
 Alerts and incidents in Elementary are designed to shorten your time to response and time to resolution when data issues occur.
 
@@ -42,8 +42,8 @@ you will be able to track all open and historical incidents, and get metrics on 
 
 ## Alert types
 
-<Snippet file="/cloud/features/alerts-and-incidents/alert-types.mdx" />
+<Snippet file="cloud/features/alerts-and-incidents/alert-types.mdx" />
 
 ## Supported alert integrations
 
-<Snippet file="/cloud/integrations/cards-groups/alerts-destination-cards.mdx" />
+<Snippet file="cloud/integrations/cards-groups/alerts-destination-cards.mdx" />
