--- a/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
@@ -2,4 +2,11 @@
 title: "Alert configuration"
 ---
 
-<Snippet file="_snippets/alerts/alerts-configuration.mdx" />  
+<CardGroup cols={2}>
+  <Card title="Alerts rules" icon="cloud" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-rules">
+    Use Alert Rules to distribute your alerts to the right channels.
+  </Card>
+  <Card title="Alerts configuration in code" icon="code" iconType="solid" href="/cloud/guides/alerts-configuration">
+    Alert content and properties configuration as code in your project YML files.
+  </Card>
+</CardGroup>
