--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -25,7 +25,7 @@ The Elementary Cloud Platform integrates into dbt workflows, providing a develop
 
 <CardGroup cols={2}>
 
-<Card title="Quickstart" href="cloud/quickstart">
+<Card title="Quickstart" href="/cloud/quickstart">
   </Card>
 <Card title="Book a call with our team" href="https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs">
   </Card>
