--- a/docs/cloud/resources/ai-agents.mdx
+++ b/docs/cloud/resources/ai-agents.mdx
@@ -2,7 +2,7 @@
 title: "Meet our new hires."
 ---
 
-<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747036956/ai-agents.png" />
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747740546/Screenshot_2025-05-14_at_11.55.57_fi3pzz.png" />
 
 ### 🪓 **Welcome Bill Cutter – Performance & Cost**
 
