--- a/docs/cloud/resources/ai-agents.mdx
+++ b/docs/cloud/resources/ai-agents.mdx
@@ -18,6 +18,11 @@ title: "Meet our new hires."
 > Welcome, Bill. We’re already feeling...lighter.
 > 
 
+
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747740546/Screenshot_2025-05-14_at_11.55.57_fi3pzz.png" align="right" width="200" />
+This text will wrap around the image on the left.
+
+
 ### 🔥 **Welcome Blaze Fixer – Incident Triage & Resolution**
 
 > Let’s give a warm welcome (pun intended) to Blaze Fixer (pronouns: fix/fixes).
