--- a/docs/cloud/resources/ai-agents.mdx
+++ b/docs/cloud/resources/ai-agents.mdx
@@ -4,6 +4,12 @@ title: "Meet our new hires."
 
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747740546/Screenshot_2025-05-14_at_11.55.57_fi3pzz.png" />
 
+
+<div style="float: left; margin-right: 10px;">
+  <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747741417/ai_agent_04_2x_qz9mou.png" width="200" />
+</div>
+<p>
+
 ### 🪓 **Welcome Bill Cutter – Performance & Cost**
 
 > Please welcome Bill Cutter to the team! (pronouns: cost/cuts)
@@ -16,11 +22,9 @@ title: "Meet our new hires."
 > **Outside of work**: Writes a performance blog called *Drop Table Everything*. Posts are short. Just like your idle query lifespan.
 > 
 > Welcome, Bill. We’re already feeling...lighter.
-> 
+</p>
 
 
-<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747740546/Screenshot_2025-05-14_at_11.55.57_fi3pzz.png" align="right" width="200" />
-This text will wrap around the image on the left.
 
 
 ### 🔥 **Welcome Blaze Fixer – Incident Triage & Resolution**
