--- a/docs/cloud/resources/ai-agents.mdx
+++ b/docs/cloud/resources/ai-agents.mdx
@@ -2,10 +2,9 @@
 title: "Meet our new hires."
 ---
 
-<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747740546/Screenshot_2025-05-14_at_11.55.57_fi3pzz.png" />
-
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747741417/ai_agent_04_2x_qz9mou.png" align="right" width="170" />
-### 🪓 **Welcome Bill Cutter – Performance & Cost**
+### 🪓 **Welcome Bill Cutter**
+_Performance & Cost_
 
 > Please welcome Bill Cutter to the team! (pronouns: cost/cuts)
 > 
@@ -17,9 +16,8 @@ title: "Meet our new hires."
 > **Outside of work**: Writes a performance blog called *Drop Table Everything*. Posts are short. Just like your idle query lifespan.
 >  
 > Welcome, Bill. We’re already feeling...lighter.
-
-
-
+>
+>
 
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747741416/ai_agent_02_2x_ofcvyd.png" align="right" width="170" />
 ### 🔥 **Welcome Blaze Fixer – Incident Triage & Resolution**
