--- a/docs/data-tests/dbt/dbt-package.mdx
+++ b/docs/data-tests/dbt/dbt-package.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Elementary dbt package"
 sidebarTitle: "Introduction"
+icon: "box-open"
 ---
 
 The Elementary dbt package serves as a collector of logs and metadata from your dbt project and offers a set of data anomaly detection and schema tests.
