--- a/docs/cloud/resources/ai-agents.mdx
+++ b/docs/cloud/resources/ai-agents.mdx
@@ -1,10 +1,9 @@
 ---
 title: "Meet our new hires."
 ---
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747747598/all_qwy94r.png" />
 
-<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747741417/ai_agent_04_2x_qz9mou.png" align="right" width="170" />
-### 🪓 **Welcome Bill Cutter**
-_Performance & Cost_
+### 🪓 **Welcome Bill Cutter - Performance & Cost**
 
 > Please welcome Bill Cutter to the team! (pronouns: cost/cuts)
 > 
@@ -19,7 +18,6 @@ _Performance & Cost_
 >
 >
 
-<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747741416/ai_agent_02_2x_ofcvyd.png" align="right" width="170" />
 ### 🔥 **Welcome Blaze Fixer – Incident Triage & Resolution**
 
 > Let’s give a warm welcome (pun intended) to Blaze Fixer (pronouns: fix/fixes).
@@ -34,7 +32,6 @@ _Performance & Cost_
 > Welcome, Blaze. We feel safer already.
 > 
 
-<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747741416/ai_agent_03_2x_bcko6a.png" align="right" width="170" />
 ### 🗂 **Welcome Cat A. Logue – Metadata Governance & Discovery**
 
 > Please welcome Cat A. Logue to the team (pronouns: tag/tags)
@@ -49,7 +46,6 @@ _Performance & Cost_
 > Welcome aboard, Cat. Our catalog already looks cleaner.
 > 
 
-<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747741416/ai_agent_01_2x_ze6nwd.png" align="right" width="170" />
 ### ✅ **Welcome Val E. Dator – Test Coverage & Recommendations**
 
 > Say hello to Val E. Dator, joining as our AI-powered test strategist (pronouns: test/tests).
