--- a/docs/cloud/resources/ai-agents.mdx
+++ b/docs/cloud/resources/ai-agents.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Meet our new hires."
-mode: "wide"
+mode: "custom"
 
 ---
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747747598/all_qwy94r.png" />
