--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -13,6 +13,10 @@ Elementary is designed with security in mind, requiring only access to logs, tes
 
 Elementary is available as both an open-source dbt package and CLI tool, or as a fully managed Cloud Platform with advanced data observability tools. Each version supports different needs, read on to learn more about what they offer.
 
+## How it works
+
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747823535/image_8_jizmvr.png" />
+
 ## Elementary’s Products
 
 Elementary offers a modular observability stack built for dbt-based data workflows. At the foundation is an open-source dbt package that captures key metadata and test results from your dbt project. This package powers both the self-hosted CLI and the fully managed Cloud Platform, which build on top of it to provide deeper visibility, automation, and collaboration features.
@@ -25,7 +29,7 @@ A lightweight and configurable dbt package that lets you add a wide range of ano
 
 The package is the starting point for both the CLI and the Cloud platform, powering them with the metadata needed to gain visibility into your data stack, uncover issues, and take action. 
 
-[**Elementary CLI (OSS)**](/oss/oss-introduction)
+[## Elementary CLI (OSS)**](/oss/oss-introduction)
 
 A self-hosted command-line tool that works alongside the Elementary dbt package to generate data observability reports, send alerts, and orchestrate workflows. The CLI runs in your environment and gives you access to a visual report that includes test results, data lineage, and dbt run history—all powered by the metadata stored in the Elementary schema. It’s ideal for teams that want to keep everything local while adding visibility and alerting to their dbt project with minimal setup.
 
