--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -1,4 +1,10 @@
-**Elementary is the data quality platform for modern data teams.**
+---
+title: "What is Elementary?"
+mode: "wide"
+
+---
+
+**Elementary is the platform for teams who make data quality a priority.**
 
 Built to integrate natively with dbt, it brings everything you need to manage and scale data quality—from detection to resolution—in one place.
 
@@ -29,7 +35,7 @@ A lightweight and configurable dbt package that lets you add a wide range of ano
 
 The package is the starting point for both the CLI and the Cloud platform, powering them with the metadata needed to gain visibility into your data stack, uncover issues, and take action. 
 
-[## Elementary CLI (OSS)**](/oss/oss-introduction)
+## [Elementary CLI (OSS)](/oss/oss-introduction)
 
 A self-hosted command-line tool that works alongside the Elementary dbt package to generate data observability reports, send alerts, and orchestrate workflows. The CLI runs in your environment and gives you access to a visual report that includes test results, data lineage, and dbt run history—all powered by the metadata stored in the Elementary schema. It’s ideal for teams that want to keep everything local while adding visibility and alerting to their dbt project with minimal setup.
 
