--- a/docs/data-tests/anomaly-detection-configuration/anomaly-sensitivity.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-sensitivity.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "anomaly_sensitivity"
 ---
 <Snippet file="ai-generate-test.mdx" />
 
-`anomaly_sensitivity: [int]`
+`anomaly_sensitivity: [float]`
 
 Configuration to define how the expected range is calculated.
 A sensitivity of 3 means that the expected range is within 3 standard deviations from the average of the training set.
