--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -3,23 +3,15 @@ title: "What is Elementary?"
 mode: "wide"
 
 ---
+Elementary helps data teams solve one of the biggest challenges of analytics and AI: data quality. As pipelines grow in complexity, teams are overwhelmed by test maintenance, incident triage, and governance tasks that steal focus from innovation. 
 
-**Elementary is the platform for teams who make data quality a priority.**
-
-Built to integrate natively with dbt, it brings everything you need to manage and scale data quality—from detection to resolution—in one place.
-
-Whether you're dealing with unexpected changes, missing tests, or broken dashboards, Elementary helps you catch issues early, understand their impact, and fix them fast. It combines deep visibility with smart automation to cover the full data quality lifecycle:
-
-- **Detection & Coverage:** Instantly identify broken models, missing tests, and anomalous behavior with custom tests and built-in monitors.
-- **Triage & Response:** Group failures into incidents, trace lineage, and surface root causes so your team can act quickly and efficiently.
-- **Governance:** Apply metadata, tags, owners, and policies across your dbt projects—helping teams stay aligned, compliant, and in control.
-- **Enablement:** With a built-in [**data catalog**](/cloud/features/collaboration-and-communication/catalog), Elementary makes it easy for analysts, product managers, and other consumers to search for data, see validation status, and understand asset health.
-
-Elementary is available as both an open-source dbt package and CLI tool, or as a fully managed Cloud Platform with advanced data observability tools. Each version supports different needs, read on to learn more about what they offer.
+Built to integrate natively with dbt, Elementary brings everything you need to manage and scale data quality—from detection to resolution—all in one place.
 
 ## How it works
 
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747823535/image_8_jizmvr.png" />
+
+
 
 ## Elementary’s Products
 
